--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,12 @@
 body{
+    /* 
     background: linear-gradient(to left, #c0d4f0 0%, #cca3ff 100%);
+    background-image: url("../Assets/yoaosbi_banner.jpg");
+    background-repeat: no-repeat;
+    background-size: cover; 
+    */
+    background: black;
+    color: #f72557;
     font-family: Helvetica;
     font-size: 1.5em;
 }
@@ -9,18 +16,23 @@ div{
 }
 
 hr{
-    background-image: linear-gradient(-20deg, #6e45e2 0%, #88d3ce 100%);
+    /* background-image: linear-gradient(-20deg, #6e45e2 0%, #88d3ce 100%); */
+    background-image: linear-gradient(-20deg, #ffffff 0%, #f72557 100%);
     height: 0.1em;
-    border-radius: 3em;
+    /* border-radius: 3em; */
+    border-style: hidden;
 }
 
 input{
     text-align: center;
-    border-radius: 0.5em;
+    /* border-radius: 0.5em; */
     border-width: 0em;
     cursor: pointer;
-    font-size: 1.8em;
-    height: 70px;
+    /* font-size: 1.8em;
+    height: 70px; */
+    font-size: 1.4em;
+    height: 105px;
+    width: 20em;
 }
 
 
@@ -50,80 +62,25 @@ input{
 }
 
 .botton{
-    background: rgba(0, 0, 0, 0);
+    /* background: rgba(0, 0, 0, 0); */
+    color: white;
+    background: transparent;
+    border-style: solid;
+    border-color: #ffffff;
+    border-width: 1px;
 }
 
 .botton:hover{
-    background: #b895ff;
-    color: #ffefc7;
-    font-style: italic;
-}
-
-/*AboutMe.html----------------------------------------------------------------------------*/
-#page{
-    width: 90%;
-    margin: 40px auto;
-}
-
-.content{
-    margin: 0 auto 35px;
-    width: 93%;
-}
-
-.content .title{
-    /*background: pink;*/
-    text-align: center;
-    width: 100%;
-    font-size: 1.8em;
-}
-
-.content .brief{
-    /*background: yellow;*/
-    width: 60%;
-    float: left;
-    font-size: 1.5em;
-}
-
-.content .list{
-    /*background: lightskyblue;*/
-    width: 38%;
-    float: right;
-    font-size: 1.5em;
-}
-
-.content .list li:hover{
-    /* background: #b895ff; */
-    color: #ffefc7;
-    font-style: italic;
-}
-
-.content .table{
-    /*background: red;*/
-    float: left;
-    width: 100%;
-    font-size: 1.5em;
-}
-
-.content .distinctPic{
-    /*background: blue;*/
-    text-align: center;
-}
-
-img{
-    width: 30%;
-}
-
-.content .homePage{
-    text-align: center;
-}
-
-.indexPage{
-    /* background: #a0c7ff; */
-    color: #fffbf2;
-    border-radius: 2em;
-    width: 12%;
-    cursor: pointer;
-    font-size: 2em;
+    /* background: #f72557; */
+    color: #f72557;
+    /* font-style: italic; */
+    background: transparent;
+    /* border-style: hidden; */
+    border-style: solid;
+    border-color: #f72557;
+    border-width: 1px;
+    box-shadow: 0px 0px 1em 0px rgba(247, 37, 87, 0.6), 
+                0px 0px 1.8em 0px rgba(247, 37, 87, 0.4) inset;
 }
 
 @media only screen and (max-width: 900px){
